--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,154 +1,106 @@
-
 body {
-    background-color: #E9DDF6;
     margin: 0;
+    padding: 0;
+    background: #9EA4B9;
     font-family: Segoe UI;
+    overflow: hidden;
 }
 
-.main-content {
-    height: auto;
-    width: 100%;
-    display: flex;
+.front-content {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    background: #3E4250;
+    background-attachment: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
 
-.left-col,
-.right-col{
-    width: 50%;
-    display: flex;
-}
-
-.left-col {
-    align-items: center;
-    justify-content: center;
-}
-
-
-.left-col .content {
-    width: 50%;
-    align-content: center;
-}
-
-header {
-    color: #F3AAF3;
-    font-size: 42px;
-}
-
-.left-col #maker {
-    color: #eebef7;
-    font-size: 14px;
-    margin: 5px 0;
-}
-
-.left-col #desc,
-.left-col #desc-pc{
-    color: #c6c6c6;
-    margin: 15px;
-    font-size: 14px;
-    line-height: 25px;
+.menu {
+    height: 25px;
+    margin: 20px;
 }
 
 
-.left-col #desc-pc {
-    display: none;
+nav {
+    margin-top: 20px;
 }
 
-.right-col .content {
-    align-content: flex-start;
-}
-
-.right-col .content #img_items {
+nav ul li {
     display: inline-block;
+    margin: 0 30px;
 }
 
-.right-col #pc {
-    width: 400px;
+a {
+    text-decoration: none;
 }
 
-.right-col #mobile {
-    height: 100px;
+nav ul li a {
+    color: #808598;
+    font-size: 26px;
+}
+
+.content {
     position: relative;
-    top: -40px;
+    width: 70%;
+    height: 50%;
+    transform: translate(-50%, -50%);
+    left: 50%;
+    top: 40%;
 }
 
-#press-info {
-    color: #DEA0E9;
-    font-size: 14px;
-    margin: 30px 0 15px 0;
+.header-grid header {
+    color: #54596A;
+    font-size: 24px;
+    text-align: center;
+    margin: 20px;
 }
 
-.right-col .content .desc {
-    text-align: center
-}
-
-#back {
-    color: #eebef7;
-    
-}
-
-#back-txt,
-#back-arrow {
-    display: inline-block;
-}
-
-#back-txt {
+.content-grid {
+    width: 100%;
     margin: 0;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-around;
 }
 
-#back-arrow {
-    height: 15px;
-    margin: 0 10px;
+.card {
+    background: #474B5A;
+    border-radius: 5px;
+    width: 200px;
+    height: 250px;
+    margin: 10px;
+    border: 1px solid #636364;
 }
 
-#lastned {
-    background: #E9DDF6;
-    border: solid #DEA0E9 1px;
-    color: #DEA0E9;
+.img-container {
+    width: 100%;
+    height: 80%;
+    top: 0;
     position: relative;
-    width: 150px;
-    padding: 10px;
-    border-radius: 200px;
+    border-bottom: 1px solid #636364; 
+    border-radius: 5px 5px 0 0;
+    overflow: hidden;
 }
 
-@media only screen and (max-width: 940px) {
-    .right-col #mobile {
-        display: none;
-    }
+#thumbnail {
+   position: relative;
+    text-align: center;
+    width: 100%;
+    opacity: 0.3;
 }
 
-@media only screen and (max-width: 800px) {
-    .main-content {
-        width: 90%;
-        margin: 0 5%;
-        display: block;
-    }
-    
-    .left-col,
-    .right-col {
-        width: 100%;
-        text-align: center;
-    }
-    
-    .right-col {
-        margin-top: 20px;
-    }
-    
-    .right-col .content{
-        width: 100%;
-        text-align: center
-        
-    }
+.header-container {
+    padding: 5px;
 }
 
-@media only screen and (max-width: 530px) {
-    .right-col #pc {
-        width: 60vw;
-        margin-bottom: 50px;
-    }
-    
-    .content .desc {
-        padding: 0 30px;
-    }
+.header-container header{
+    color: #95989A;
+    font-size: 14px;
+}
+
+.header-container p {
+    margin: 0;
+    font-size: 12px;
+    color: #8DA6FF;
 }
