--- a/assets/css/article.css
+++ b/assets/css/article.css
@@ -1,16 +1,26 @@
+body {
+   background: #3E4250 !important; 
+}
+
 .artc-header {
     position: absolute;
     top: 0;
     left: 0;
     height: 60%;
     width: 100%;
-    background: url("../img/mystic_beach/desktop.png") center no-repeat ;
+    background: url("../img/mystic_beach/desktop.png") center no-repeat;
+    
+    /* Parallax effect */
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .filter {
     width: 100%;
     height: 100%;
-    position: relative;
+    position: absolute;
     left: 0;
     top: 0;
     background: #3E4250;
@@ -18,8 +28,47 @@
 }
 
 .artc-body {
-    margin: 0 20%;
+    margin: 0 20% 20%;
     position: absolute;
-    top: 65%;
+    top: 40%;
     color: #9EA4B9;
+    background: #454958;
+    padding: 15px;
+}
+
+.action-bar {
+    display: flex;
+    justify-content: space-between;
+    padding-bottom: 10px;
+    border-bottom: solid 1px #50545d;
+}
+
+.action-bar .right-action img{
+    height: 25px;
+}
+.action-bar .left-action img {
+    height: 25px;
+}
+
+
+.header-body {
+    text-align: center;
+    transform: translateY(-50%);
+    position: relative;
+    top: 50%;
+    z-index: 100;
+}
+
+.header-body header {
+    color: #9EA4B9;
+    font-size: 26px;
+}
+
+.header-body p {
+    margin: 0;
+    color: #88a1f8;
+}
+
+.footer {
+    position: absolute;
 }
